// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedItem should render successfully 1`] = `
.c0 {
  --itemSize: 50px;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  animation: 12s horizontal-movement 1s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  --translateY-begin: -43%;
  --translateY-end: 23%;
  animation: 7s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 3;
  transform-origin: center;
}

.c2::after {
  content: '';
  width: var(--itemSize);
  height: var(--itemSize);
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #7fa37a;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimatedItem should render successfully with a rotation and no path 1`] = `
.c0 {
  --itemSize: 50px;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  animation: 12s horizontal-movement 1s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  --translateY-begin: -43%;
  --translateY-end: 23%;
  animation: 7s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 3;
  transform-origin: center;
  --rotation: calc(               1 *                 360deg             );
  animation: 3s rotate-movement linear infinite;
}

.c2::after {
  content: '';
  width: var(--itemSize);
  height: var(--itemSize);
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #7fa37a;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;
